--- a/cadastros/templates/cadastros/form_create.html
+++ b/cadastros/templates/cadastros/form_create.html
@@ -1,7 +1,7 @@
 {% extends 'paginas/modelo.html' %}
 
 {% load static %}
-{% load crispy_forms_tags %}
+{% comment %} {% load crispy_forms_tags %} {% endcomment %}
 {% block conteudo %}
 <h1 class="mt-4">Cadastros do sistema</h1>
 <p class="lead">
@@ -9,8 +9,8 @@
 </p>
 <form method="POST" class="my-4">
     {% csrf_token %}
-    {{ form|crispy }}
-    {{form as }}
+    {% comment %} {{ form|crispy }} {% endcomment %}
+    {{ form.as_p }}
     <button type="submit" class="btn btn-primary">
         Salvar
     </button>
